# tcw

./: Dockerfile  README.md  migrate.py  pyproject.toml  requirements.txt  setup.py  shared_run.py  test.py
docs/: howto.txt
tcw/: __init__.py  application.py  config.py  database.py  devserver.py  filters.py  jobs.py  message.py  run.py  utils.py
tcw/apps/contest/: controllers.py  forms.py  models.py  views.py
tcw/apps/contest/templates/contest/: about.html  animation.html  form.html  index.html  privacy.html  signup.html  slide1.html  slide2.html  slide3.html  success.html  thanks.html
tcw/models/: ext.py
tcw/templates/: 404.html  410.html  base.html
tcw/tests/: test_app.py  test_config.py  test_db.py  test_models.py  test_mutable.py  test_utils.py
tcw/workers/: celery.py  message.py  templates.py
