[project]
name = "tcw"
version = "0.0.2"
authors = [
  { name="J Leary", email="tinycontestwinners@gmail.com" },
]
description = "Flask web app for simple contest/raffle site"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TinyContestWinners/tcw"
